--- a/core/templates/professor_disc.html
+++ b/core/templates/professor_disc.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Page Title</title>
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/base.css">
-    <link rel="stylesheet" type="text/css" href="css/professor_disc.css">
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <title>Disciplina</title>
+    <link rel="stylesheet" type="text/css" href="../static/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="../static/css/base.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/professor_disc.css">
+    <script src="../static/js/jquery.min.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
 </head>
 <body>
 <header>
     <div class="page-header fundo-claro">
-        <img src="img/logomarca-impacta.png" alt="logo" class="pull-left logo">
+        <img src="../static/img/logomarca-impacta.png" alt="logo" class="pull-left logo">
         <div class="container">
-            <img src="img/logo-faculdade-branco.png" alt="Faculdade Impacta" class="center-block">
+            <img src="../static/img/logo-faculdade-branco.png" alt="Faculdade Impacta" class="center-block">
         </div>
     </div>
 </header>
