--- a/core/templates/professor_boletim.html
+++ b/core/templates/professor_boletim.html
@@ -4,19 +4,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Page Title</title>
-    <link rel="stylesheet" type="text/css" href=":/static/css/normalize.css">
-    <link rel="stylesheet" type="text/css" href=":/static/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href=":/static/css/base.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="../static/css/base.css">
     <style rel="stylesheet" type="text/css"></style>
-    <script type="text/javascript" src=":/static/js/jquery.min.js"></script>
-    <script type="text/javascript" src=":/static/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../static/js/jquery.min.js"></script>
+    <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
 </head>
 <body>
 <header>
     <div class="page-header fundo-claro">
-        <img src=":/static/img/logomarca-impacta.png" alt="logo" class="pull-left logo">
+        <img src="../static/img/logomarca-impacta.png" alt="logo" class="pull-left logo">
         <div class="container">
-            <img src=":/static/img/logo-faculdade-branco.png" alt="Faculdade Impacta" class="center-block">
+            <img src="../static/img/logo-faculdade-branco.png" alt="Faculdade Impacta" class="center-block">
         </div>
     </div>
 </header>
