--- a/core/templates/cadastro_coordenador.html
+++ b/core/templates/cadastro_coordenador.html
@@ -136,8 +136,11 @@
 
                         
         </form>
+    </div>
+</div>
+</div>
+</div>
 
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <div class="container">
     <a class="btn btn-danger btn-lg" href="#" role="button">Cancelar</a>
     <a class="btn btn-success btn-lg" href="#" role="button">Salvar</a>
