--- a/core/templates/matricular.html
+++ b/core/templates/matricular.html
@@ -1,114 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Page Title</title>
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/base.css">
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-</head>
-<body>
-<header>
-    <div class="page-header fundo-claro">
-        <img src="img/logomarca-impacta.png" alt="logo" class="pull-left logo">
-        <div class="container">
-            <img src="img/logo-faculdade-branco.png" alt="Faculdade Impacta" class="center-block">
-        </div>
-    </div>
-</header>
-<div class="container">
-    <!--Menu-->
-    <div class="col-sm-2">
-        <h3 class="titulo-menu">
-            Menu
-            <div class="divider"></div>
-        </h3>
-        <div class="menu-vertical">
-            <div class="btn" >
-                Dropdown
-                <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
-            </div>
-            <div class="menu-vertical-conteudo">
-                <ul class="" aria-labelledby="menuverticalDivider">
-                    <li>
-                        <a href="#">
-                            <span class="glyphicon glyphicon-minus"></span>
-                            Action
-                        </a>
-                    </li>
-                    <li role="separator" class="divider"></li>
-                    <li>
-                        <a href="#">                                
-                            <span class="glyphicon glyphicon-minus"></span>
-                            Another action
-                        </a>
-                    </li>
-                    <li role="separator" class="divider"></li>
-                    <li>
-                        <a href="#">
-                            <span class="glyphicon glyphicon-minus"></span>
-                            Something else here
-                        </a>
-                    </li>
-                    <li role="separator" class="divider"></li>
-                    <li>
-                        <a href="#">
-                            <span class="glyphicon glyphicon-minus"></span>
-                            Separated link
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="divider"></div>
-        <div class="menu-vertical">
-            <div class="btn" >
-                Dropdown
-                <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
-            </div>
-            <div class="menu-vertical-conteudo">
-                <ul class="" aria-labelledby="menuverticalDivider">
-                    <li>
-                        <a href="#">
-                            <span class="glyphicon glyphicon-minus"></span>
-                            Action
-                        </a>
-                    </li>
-                    <li role="separator" class="divider"></li>
-                    <li>
-                        <a href="#">                                
-                            <span class="glyphicon glyphicon-minus"></span>
-                            Another action
-                        </a>
-                    </li>
-                    <li role="separator" class="divider"></li>
-                    <li>
-                        <a href="#">
-                            <span class="glyphicon glyphicon-minus"></span>
-                            Something else here
-                        </a>
-                    </li>
-                    <li role="separator" class="divider"></li>
-                    <li>
-                        <a href="#">
-                            <span class="glyphicon glyphicon-minus"></span>
-                            Separated link
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="divider"></div>
-        <div class="menu-vertical">
-            <div class="btn" >
-                Dropdown
-            </div>
-        </div>
-    </div>    
-    <!--mandar mensagemm-->
+{%extends "base.html"%}
+{%conteudo block%}
+<!--mandar mensagemm-->
     <form>
             <div class="col-sm-5">
                 <div class="form-group col-sm-10">
@@ -132,12 +24,7 @@
             <div class="form-group col-sm-5">
                 <label for="email">*E-mail:</label>
                 <input type="text" class="form-control" id="email" placeholder="nome@email.com.br">
-            </div>
-                                      
+            </div>                       
         </form>
-    
-    
-</div>
-<footer></footer>
-</body>
-</html>
+    </div>
+{%endblock%}
