--- a/core/templates/matricula_aluno.html
+++ b/core/templates/matricula_aluno.html
@@ -4,16 +4,16 @@
     <div class = "container">
         <div class="col-sm-10">
             <ul class="nav nav-tabs nav-justified">
-                <li><a href = "disci_matr.html">Semestre 1º</a></li>
+                <li><a href = "{% url disci_matr.html%}">Semestre 1º</a></li>
             </ul>
             <ul class="nav nav-tabs nav-justified">
-                <li><a href = "disci_matr.html">Semestre 2º</a></li>
+                <li><a href = "{% url disci_matr.html%}">Semestre 2º</a></li>
             </ul>
             <ul class="nav nav-tabs nav-justified">
-                <li><a href = "disci_matr.html">Semestre 3º</a></li>
+                <li><a href = "{% url disci_matr.html%}">Semestre 3º</a></li>
             </ul>
             <ul class="nav nav-tabs nav-justified">
-                <li><a href = "disci_matr.html">Semestre 4º</a></li>
+                <li><a href = "{% url disci_matr.html%}">Semestre 4º</a></li>
             </ul>
 
         </div>
