--- a/core/templates/painel_aluno.html
+++ b/core/templates/painel_aluno.html
@@ -4,11 +4,11 @@
     <div class = "container">
         <nav class ="categorias">
             <ul>
-                <li><a href = "painel_aluno.html">Painel</a></li>
-                <li><a href = "envio_sms.html">Enviar Mensagem</a></li>
-                <li><a href = "sms_enviadas.html">Enviadas</a></li>
-                <li><a href = "recebidas.html">Recebidas</a></li>
-                <li><a href = "rascunhos.html">Rascunhos</a></li>
+                <li><a href = "{% url painel_aluno.html%}">Painel</a></li>
+                <li><a href = "{% url envio_sms.html %}">Enviar Mensagem</a></li>
+                <li><a href = "{% url sms_enviadas.html %}">Enviadas</a></li>
+                <li><a href = "{% url recebidas.html %}">Recebidas</a></li>
+                <li><a href = "{% url rascunhos.html %}">Rascunhos</a></li>
             </ul>
         </nav>
     <div>
