--- a/core/templates/mensagens_rascunhos.html
+++ b/core/templates/mensagens_rascunhos.html
@@ -3,11 +3,11 @@
 {% block conteudo %}
 <nav class ="categorias col-xs-4">
     <ul>
-        <li><a href="{% url 'painel_aluno' %}">Painel</a></li>
-        <li><a href="{% url 'mensagem_nova' %}">Enviar Mensagem</a></li>
-        <li><a href="{% url 'mensagens_enviadas' %}">Enviadas</a></li>
-        <li><a href="{% url 'mensagens_recebidas' %}">Recebidas</a></li>
-        <li><a href="{% url 'mensagens_rascunhos' %}">Rascunhos</a></li>
+        <li><a href="{% url 'painel_mensagem' perfil_logado %}">Painel</a></li>
+        <li><a href="{% url 'mensagem_nova' perfil_logado %}">Enviar Mensagem</a></li>
+        <li><a href="{% url 'mensagens_enviadas' perfil_logado %}">Enviadas</a></li>
+        <li><a href="{% url 'mensagens_recebidas' perfil_logado %}">Recebidas</a></li>
+        <li><a href="{% url 'mensagens_rascunhos' perfil_logado %}">Rascunhos</a></li>
     </ul>
 </nav>
 <div class="col-xs-8">
@@ -15,12 +15,12 @@
     
     <nav>
         <ul>
-            <li><a href="{% url 'mensagem_nova' %}">Assunto #1</a></li>
-            <li><a href="{% url 'mensagem_nova' %}">Assunto #2</a></li>
-            <li><a href="{% url 'mensagem_nova' %}">Assunto #3</a></li>
-            <li><a href="{% url 'mensagem_nova' %}">Assunto #4</a></li>
-            <li><a href="{% url 'mensagem_nova' %}">Assunto #5</a></li>
-            <li><a href="{% url 'mensagem_nova' %}">Assunto #6</a></li>                
+            <li><a href="{% url 'mensagem_nova' perfil_logado %}">Assunto #1</a></li>
+            <li><a href="{% url 'mensagem_nova' perfil_logado %}">Assunto #2</a></li>
+            <li><a href="{% url 'mensagem_nova' perfil_logado %}">Assunto #3</a></li>
+            <li><a href="{% url 'mensagem_nova' perfil_logado %}">Assunto #4</a></li>
+            <li><a href="{% url 'mensagem_nova' perfil_logado %}">Assunto #5</a></li>
+            <li><a href="{% url 'mensagem_nova' perfil_logado %}">Assunto #6</a></li>                
         </ul>
     </nav>
 </div>      
