--- a/core/templates/cadastro_aluno.html
+++ b/core/templates/cadastro_aluno.html
@@ -1,27 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cadastro Alunos</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="../static/css/base.css">
-    <style rel="stylesheet" type="text/css"></style>
-    <script type="text/javascript" src="../static/js/jquery.min.js"></script>
-    <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
-</head>
-<body>
-<header>
-    <div class="page-header fundo-claro">
-        <img src="../static/img/logomarca-impacta.png" alt="logo" class="pull-left logo">
-        <div class="container">
-            <img src="../static/img/logo-faculdade-branco.png" alt="Faculdade Impacta" class="center-block">
-        </div>
-    </div>
-</header><br/>
+{% extends "base.html" %}
 
+{% block conteudo %}
 <!--Menu  #####################################################################################################################################################-->
 
 <div class="jumbotron jumbotron-fluid">
@@ -135,32 +114,12 @@
     </div>
     </div>
     </div>
-    </div>
-
+</div>
     
 
-    <div class="container">
-    <a class="btn btn-danger btn-lg" href="#" role="button">Cancelar</a>
-    <a class="btn btn-success btn-lg" href="#" role="button">Salvar</a>
-    </div>
-
-    
-    </div>
+<div class="container">
+<a class="btn btn-danger btn-lg" href="#" role="button">Cancelar</a>
+<a class="btn btn-success btn-lg" href="#" role="button">Salvar</a>
 </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
-</html>
+{% endblock %}
