--- a/core/templates/cadastro_coordenador.html
+++ b/core/templates/cadastro_coordenador.html
@@ -1,26 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cadastro Coordenador</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="../static/css/base.css">
-    <style rel="stylesheet" type="text/css"></style>
-    <script type="text/javascript" src="../static/js/jquery.min.js"></script>
-    <script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
-</head>
-<body>
-<header>
-    <div class="page-header fundo-claro">
-        <img src="../static/img/logomarca-impacta.png" alt="logo" class="pull-left logo">
-        <div class="container">
-            <img src="../static/img/logo-faculdade-branco.png" alt="Faculdade Impacta" class="center-block">
-        </div>
-    </div>
-</header><br/>
+{% extends "base.html" %}
+
+{% block conteudo %}
 
 <!--Menu  #####################################################################################################################################################-->
 
@@ -146,23 +126,4 @@
     <a class="btn btn-success btn-lg" href="#" role="button">Salvar</a>
     </div>
 
-    </div><!-- fim .container dentro do jumbotron -->
-</div><!-- fim .jumbotron -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
-</html>
+{% endblock %}
