--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -17,8 +17,8 @@
         <div class="page-header fundo-claro">
             <img src="{% static 'img/AFC_Ajax.png' %}" alt="logo" class="pull-left logo">
             <div class="container">
-                <img src="{% static 'img/AFC_Ajax.png' %}" alt="Faculdade Impacta" class="center-block hidden">
-                <h1 class="text-center titulo-header">AJAX</h1>
+                <img src="{% static 'img/logo_blacksmith.jpeg' %}" alt="Universidade BlackSmith" class="center-block hidden">
+                <h1 class="text-center">Universidade BlackSmith</h1>
             </div>
         </div>
     </header>
