--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -30,7 +30,7 @@
                 </label>
             </div>
             <button type = "submit" class = "btn btn-lg btn-primary btn-block hidden">Entrar</button>
-            <a href="{% url 'index' %}" class="btn btn-primary">Entrar</a>
+            <a href="{% url 'index' 'Aluno' %}" class="btn btn-primary">Entrar</a>
         </form>
         </div>
     </body>
