--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -14,12 +14,8 @@
 </head>
 <body>
     <header>
-        <div class="page-header fundo-claro">
-            <img src="{% static 'img/AFC_Ajax.png' %}" alt="logo" class="pull-left logo">
-            <div class="container">
-                <img src="{% static 'img/logo_blacksmith.jpeg' %}" alt="Universidade BlackSmith" class="center-block hidden">
-                <h1 class="text-center">Universidade BlackSmith</h1>
-            </div>
+        <div class="">
+            <img src="{% static 'img/blacsmith_logo.png' %}" alt="Universidade BlackSmith" class="img-responsive center-block">                
         </div>
     </header>
     <div class="container">
