--- a/core/static/css/base.css
+++ b/core/static/css/base.css
@@ -59,9 +59,13 @@ a:hover{
 
 /*Extras*/
 header {
-    background-color: rgb(168, 168, 168);
+    background-color: white;
+    background-image: url('../img/estudos.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     width: 100%;
-    padding: 10px 0;
+    padding-top: 10px;
 }
 
 .logo{
