--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="">
-            <img src="{% static 'img/blacsmith_logo.png' %}" alt="Universidade BlackSmith" class="img-responsive center-block">                
+            <img src="{% static 'img/universidadeblacksmithlogo.png' %}" alt="Universidade BlackSmith" class="img-responsive center-block">                
         </div>
     </header>
     <div class="container">
